cabal-version:       >=1.10

name:                exec
version:             0.1.0.0
synopsis:            Execute processes
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Luke Clifton
maintainer:          lukec@themk.net
-- copyright:
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     System.Process
  build-depends:       base >=4.10 && <5.0, unix, bytestring, deepseq, async
  default-language:    Haskell2010
